--- a/.classpath
+++ b/.classpath
@@ -16,65 +16,25 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Hank/Downloads/PD_Final_LM/PD_Final_LM/commons-math3-3.6.1/commons-math3-3.6.1.jar">
+	<classpathentry kind="lib" path="/Users/yinziwei/Downloads/Weka-3-8-6/weka.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Hank/Downloads/Weka-3-8-6/Weka-3-8-6/weka.jar">
+	<classpathentry kind="lib" path="/Users/yinziwei/commons-math3-3.6.1/commons-math3-3.6.1-javadoc.jar"/>
+	<classpathentry kind="lib" path="/Users/yinziwei/commons-math3-3.6.1/commons-math3-3.6.1-sources.jar"/>
+	<classpathentry kind="lib" path="/Users/yinziwei/commons-math3-3.6.1/commons-math3-3.6.1-test-sources.jar"/>
+	<classpathentry kind="lib" path="/Users/yinziwei/commons-math3-3.6.1/commons-math3-3.6.1-tests.jar"/>
+	<classpathentry kind="lib" path="/Users/yinziwei/commons-math3-3.6.1/commons-math3-3.6.1-tools.jar"/>
+	<classpathentry kind="lib" path="/Users/yinziwei/commons-math3-3.6.1/commons-math3-3.6.1.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Hank/Downloads/smile-2.6.0/smile-2.6.0/lib/com.github.haifengl.smile-core-2.6.0.jar">
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JavaFX">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Hank/Downloads/smile-2.6.0/smile-2.6.0/lib/com.github.haifengl.smile-data-2.6.0.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Hank/Downloads/smile-2.6.0/smile-2.6.0/lib/com.github.haifengl.smile-graph-2.6.0.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Hank/Downloads/smile-2.6.0/smile-2.6.0/lib/com.github.haifengl.smile-math-2.6.0.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Hank/Downloads/smile-2.6.0/smile-2.6.0/lib/com.github.haifengl.smile-demo-2.6.0.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Hank/Downloads/smile-2.6.0/smile-2.6.0/lib/com.github.haifengl.smile-interpolation-2.6.0.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Hank/Downloads/smile-2.6.0/smile-2.6.0/lib/com.github.haifengl.smile-io-2.6.0.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Hank/Downloads/smile-2.6.0/smile-2.6.0/lib/com.github.haifengl.smile-json-2.6.0.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Hank/Downloads/JChart/JChart.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Hank/Downloads/PD_Final_LM/PD_Final_LM/commons-math3-3.6.1/commons-math3-3.6.1-javadoc.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Hank/Downloads/PD_Final_LM/PD_Final_LM/commons-math3-3.6.1/commons-math3-3.6.1-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Hank/Downloads/PD_Final_LM/PD_Final_LM/commons-math3-3.6.1/commons-math3-3.6.1-tests.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Hank/Downloads/PD_Final_LM/PD_Final_LM/commons-math3-3.6.1/commons-math3-3.6.1-test-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Hank/Downloads/PD_Final_LM/PD_Final_LM/commons-math3-3.6.1/commons-math3-3.6.1-tools.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
